--- a/index.html
+++ b/index.html
@@ -64,25 +64,25 @@
 	</button>
 	
     </nav>
-	
   </header>
  
   <main>
     <article class="article">
-	
-	  <header class="article-header-main">
-	    
-
-		
-	   </header>
-
+	  <div id="central">
+     	<div id="calendar-container">
+		   <div id="calendar-header">
+		     <span id="calendar-month-year"></span>
+		   </div>
+		   <div id="calendar-dates">
+		   </div>       
+		</div>
+	  </div>
     </article>
-
   </main>
 
   <footer>
   </footer>
- <script src="main.js"></script> 
+ <script src="restaurant.js"></script> 
 </body>
 
 </html>
