--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <html lang="pl">
 <head>	
 <meta charset="utf-8">
- <title>Wypoczynek w Pleśnej</title>
-  <meta name="Description" content="Wyboczynek w Pleśnej - domek do wynajęcia" />
-  <meta name="Keywords" content="domek w Beskidach, wczasy w Beskidach, wakacje w górach, Pleśna, Beskidy, domek do wynajęcia" />
+ <title>Restaurant</title>
   <meta name="viewport" content="width=device-width" /> 
     <link rel="stylesheet" href="main.css" media="screen" /> 
     <link href='https://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
