--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 <body>
 
   <header class="testa"> 
- 
+
        <nav class="top-nav">
  
   <a href="#" title="Main Page">
     <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	 width="35px" height="35px" viewBox="0 0 430.123 430.123" style="enable-background:new 0 0 430.123 430.123;"
+	 width="40px" height="40px" viewBox="0 0 430.123 430.123" style="enable-background:new 0 0 430.123 430.123;"
 	 xml:space="preserve" class="page-logo" >
       <path id="Dropbox_1_" d="M348.911,169.42L220.258,91.062l81.133-67.164l128.732,79.217L348.911,169.42z M300.532,317.532
 		l123.547-72.331l-74.31-62.858l-120.961,73.191L300.532,317.532z M201.328,255.534L80.355,182.343L6.06,245.201l123.559,72.331
@@ -65,17 +65,52 @@
   </header>
  
   <main>
-    <article class="article">
-	  <div id="central">
-     	<div id="calendar-container">
-		   <div id="calendar-header">
-		     <span id="calendar-month-year"></span>
-		   </div>
-		   <div id="calendar-dates">
-		   </div>       
-		</div>
-	  </div>
+    <article class="article-header">
+
     </article>
+	
+	  <div class="articles">
+	  
+	  	 <article class="art">
+		 <h3>Lorem ipsum dolor sit amet</h3>
+		 <img src="krakow-1.jpg" class="artimage">
+		 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+		 </article>
+		 
+	     <article class="art">
+		 <h3>Lorem ipsum dolor sit amet</h3>
+		 <img src="krakow-1.jpg" class="artimage">
+		 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+		 </article>
+		 
+		 <article class="art">
+		 <h3>Lorem ipsum dolor sit amet</h3>
+		 <img src="krakow-1.jpg" class="artimage">
+		 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+		 </article>
+		 
+	  	 <article class="art">
+		 <h3>Lorem ipsum dolor sit amet</h3>
+		 <img src="krakow-1.jpg" class="artimage">
+		 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+		 </article>
+		 
+	     <article class="art">
+		 <h3>Lorem ipsum dolor sit amet</h3>
+		 <img src="krakow-1.jpg" class="artimage">
+		 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+		 </article>
+		 
+		 <article class="art">
+		 <h3>Lorem ipsum dolor sit amet</h3>
+		 <img src="krakow-1.jpg" class="artimage">
+		 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+		 </article>
+		 
+	  </div>
+	
+	
+	
   </main>
 
   <footer>
