--- a/index.html
+++ b/index.html
@@ -6,16 +6,20 @@
   <meta name="viewport" content="width=device-width" /> 
     <link rel="stylesheet" href="main.css" media="screen" /> 
     <link href='https://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.3/jquery.min.js" /></script>
 </head>
 
 <body>
 
-  <header class="testa"> 
+  <header>
+  
+    <div class="testa">
+    </div>	
+
+	  <img src="Pepperoni_Lovers_Pizza.png" id="pizza" />	
 
        <nav class="top-nav">
- 
-  <a href="#" title="Main Page">
+ <!--
+  <a href="#" title="Main Page" class="page-logo">
     <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 width="40px" height="40px" viewBox="0 0 430.123 430.123" style="enable-background:new 0 0 430.123 430.123;"
 	 xml:space="preserve" class="page-logo" >
@@ -25,7 +29,7 @@
 		l-82.001-67.173v143.811l123.454-75.774V307.199z M209.878,91.062l-81.135-67.164L0,103.115l81.226,66.305L209.878,91.062z"/>
     </svg>
   </a>
-	  
+	-->  
 	     <ul class="navig">
 		   <li class="nav-p"><a href="#" title="">Emilia-Romania</a></li>
 		   <li class="nav-p"><a href="#" title="">Ferrara</a></li>
@@ -115,7 +119,9 @@
 
   <footer>
   </footer>
- <script src="restaurant.js"></script> 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.3/jquery.min.js" ></script>
+	<script src="jquery.waypoints.min.js"></script> 
+    <script src="main.js"></script> 
 </body>
 
 </html>
